<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.bitcss.arctra</groupId>
    <artifactId>arctra-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Arctra :: Parent</name>
    <description>Arctra AI - Agent Engineering Harness for Spring Ecosystem</description>

    <properties>
        <!-- Version -->
        <revision>0.0.1-SNAPSHOT</revision>

        <!-- Java -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!-- Encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Spring -->
        <spring-boot.version>4.0.0</spring-boot.version>
        <spring-ai.version>2.0.0</spring-ai.version>

        <!-- Testing -->
        <archunit.version>1.3.0</archunit.version>

        <!-- Plugins -->
        <spotless.version>2.43.0</spotless.version>
        <jacoco.version>0.8.12</jacoco.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
    </properties>

    <modules>
        <module>arctra-api</module>
        <module>arctra-core</module>
        <module>arctra-runtime-react</module>
        <module>arctra-rag</module>
        <module>arctra-tool</module>
        <module>arctra-testkit</module>
        <module>arctra-spring-boot-starter</module>
        <module>examples/knowledge-assistant</module>
        <module>examples/incident-investigator</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- ArchUnit -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Internal Modules -->
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-runtime-react</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-rag</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-tool</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-testkit</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>cn.bitcss.arctra</groupId>
                <artifactId>arctra-spring-boot-starter</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Spring Boot Maven Plugin -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>

                <!-- Maven Compiler Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>

                <!-- Maven Surefire Plugin (Unit Tests) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>

                <!-- Maven Failsafe Plugin (Integration Tests) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>

                <!-- Spotless -->
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.version}</version>
                    <configuration>
                        <java>
                            <googleJavaFormat>
                                <version>1.22.0</version>
                                <style>GOOGLE</style>
                            </googleJavaFormat>
                            <importOrder>
                                <order>java,javax,jakarta,org,com,cn,</order>
                            </importOrder>
                            <removeUnusedImports/>
                            <formatAnnotations/>
                        </java>
                    </configuration>
                </plugin>

                <!-- JaCoCo -->
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Flatten Maven Plugin -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten-maven-plugin.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten-clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Maven Enforcer Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-architecture-rules</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <!-- Java Version -->
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                    <message>Java 21 or higher is required</message>
                                </requireJavaVersion>

                                <!-- Maven Version -->
                                <requireMavenVersion>
                                    <version>[3.9.0,)</version>
                                    <message>Maven 3.9.0 or higher is required</message>
                                </requireMavenVersion>

                                <!-- Dependency Convergence -->
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Flatten Maven Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>

            <!-- Spotless -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>

            <!-- JaCoCo -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
